src/main/gen/com/github/joshflash/ponylangplugin/parser/PonyParser.java
// This is a generated file. Not intended for manual editing.
package com.github.joshflash.ponylangplugin.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.github.joshflash.ponylangplugin.language.psi.PonyTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class PonyParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return module(b, l + 1);
  }

  /* ********************************************************** */
  // [idlist] (exprseq | jump)
  public static boolean annotatedrawseq(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotatedrawseq")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ANNOTATEDRAWSEQ, "<annotatedrawseq>");
    r = annotatedrawseq_0(b, l + 1);
    r = r && annotatedrawseq_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [idlist]
  private static boolean annotatedrawseq_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotatedrawseq_0")) return false;
    idlist(b, l + 1);
    return true;
  }

  // exprseq | jump
  private static boolean annotatedrawseq_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotatedrawseq_1")) return false;
    boolean r;
    r = exprseq(b, l + 1);
    if (!r) r = jump(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // infix [EQUALS assignment]
  public static boolean assignment(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGNMENT, "<assignment>");
    r = infix(b, l + 1);
    r = r && assignment_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [EQUALS assignment]
  private static boolean assignment_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_1")) return false;
    assignment_1_0(b, l + 1);
    return true;
  }

  // EQUALS assignment
  private static boolean assignment_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, EQUALS);
    r = r && assignment(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // particle
  //   | ifblock
  //   | whileloop
  //   | forloop
  //   | LP rawseq [tuple] RP
  //   | LBK [AS type COLON] [rawseq] RBK
  public static boolean atom(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ATOM, "<atom>");
    r = particle(b, l + 1);
    if (!r) r = ifblock(b, l + 1);
    if (!r) r = whileloop(b, l + 1);
    if (!r) r = forloop(b, l + 1);
    if (!r) r = atom_4(b, l + 1);
    if (!r) r = atom_5(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // LP rawseq [tuple] RP
  private static boolean atom_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_4")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LP);
    r = r && rawseq(b, l + 1);
    r = r && atom_4_2(b, l + 1);
    r = r && consumeToken(b, RP);
    exit_section_(b, m, null, r);
    return r;
  }

  // [tuple]
  private static boolean atom_4_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_4_2")) return false;
    tuple(b, l + 1);
    return true;
  }

  // LBK [AS type COLON] [rawseq] RBK
  private static boolean atom_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_5")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBK);
    r = r && atom_5_1(b, l + 1);
    r = r && atom_5_2(b, l + 1);
    r = r && consumeToken(b, RBK);
    exit_section_(b, m, null, r);
    return r;
  }

  // [AS type COLON]
  private static boolean atom_5_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_5_1")) return false;
    atom_5_1_0(b, l + 1);
    return true;
  }

  // AS type COLON
  private static boolean atom_5_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_5_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AS);
    r = r && type(b, l + 1);
    r = r && consumeToken(b, COLON);
    exit_section_(b, m, null, r);
    return r;
  }

  // [rawseq]
  private static boolean atom_5_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_5_2")) return false;
    rawseq(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // THIS
  //   | cap
  //   | LP infixtype [tupletype] RP
  //   | nominal
  //   | lambdatype
  //   | barelambdatype
  public static boolean atomtype(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atomtype")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ATOMTYPE, "<atomtype>");
    r = consumeToken(b, THIS);
    if (!r) r = cap(b, l + 1);
    if (!r) r = atomtype_2(b, l + 1);
    if (!r) r = nominal(b, l + 1);
    if (!r) r = lambdatype(b, l + 1);
    if (!r) r = barelambdatype(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // LP infixtype [tupletype] RP
  private static boolean atomtype_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atomtype_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LP);
    r = r && infixtype(b, l + 1);
    r = r && atomtype_2_2(b, l + 1);
    r = r && consumeToken(b, RP);
    exit_section_(b, m, null, r);
    return r;
  }

  // [tupletype]
  private static boolean atomtype_2_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atomtype_2_2")) return false;
    tupletype(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // RCVR [cap] [id] [typeparams] LP [type (COMMA type)*] RP [COLON type] [QM] RBC [cap | gencap] [CARET | BANG]
  public static boolean barelambdatype(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "barelambdatype")) return false;
    if (!nextTokenIs(b, RCVR)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, RCVR);
    r = r && barelambdatype_1(b, l + 1);
    r = r && barelambdatype_2(b, l + 1);
    r = r && barelambdatype_3(b, l + 1);
    r = r && consumeToken(b, LP);
    r = r && barelambdatype_5(b, l + 1);
    r = r && consumeToken(b, RP);
    r = r && barelambdatype_7(b, l + 1);
    r = r && barelambdatype_8(b, l + 1);
    r = r && consumeToken(b, RBC);
    r = r && barelambdatype_10(b, l + 1);
    r = r && barelambdatype_11(b, l + 1);
    exit_section_(b, m, BARELAMBDATYPE, r);
    return r;
  }

  // [cap]
  private static boolean barelambdatype_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "barelambdatype_1")) return false;
    cap(b, l + 1);
    return true;
  }

  // [id]
  private static boolean barelambdatype_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "barelambdatype_2")) return false;
    consumeToken(b, ID);
    return true;
  }

  // [typeparams]
  private static boolean barelambdatype_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "barelambdatype_3")) return false;
    typeparams(b, l + 1);
    return true;
  }

  // [type (COMMA type)*]
  private static boolean barelambdatype_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "barelambdatype_5")) return false;
    barelambdatype_5_0(b, l + 1);
    return true;
  }

  // type (COMMA type)*
  private static boolean barelambdatype_5_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "barelambdatype_5_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = type(b, l + 1);
    r = r && barelambdatype_5_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA type)*
  private static boolean barelambdatype_5_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "barelambdatype_5_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!barelambdatype_5_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "barelambdatype_5_0_1", c)) break;
    }
    return true;
  }

  // COMMA type
  private static boolean barelambdatype_5_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "barelambdatype_5_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && type(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [COLON type]
  private static boolean barelambdatype_7(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "barelambdatype_7")) return false;
    barelambdatype_7_0(b, l + 1);
    return true;
  }

  // COLON type
  private static boolean barelambdatype_7_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "barelambdatype_7_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COLON);
    r = r && type(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [QM]
  private static boolean barelambdatype_8(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "barelambdatype_8")) return false;
    consumeToken(b, QM);
    return true;
  }

  // [cap | gencap]
  private static boolean barelambdatype_10(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "barelambdatype_10")) return false;
    barelambdatype_10_0(b, l + 1);
    return true;
  }

  // cap | gencap
  private static boolean barelambdatype_10_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "barelambdatype_10_0")) return false;
    boolean r;
    r = cap(b, l + 1);
    if (!r) r = consumeToken(b, GENCAP);
    return r;
  }

  // [CARET | BANG]
  private static boolean barelambdatype_11(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "barelambdatype_11")) return false;
    barelambdatype_11_0(b, l + 1);
    return true;
  }

  // CARET | BANG
  private static boolean barelambdatype_11_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "barelambdatype_11_0")) return false;
    boolean r;
    r = consumeToken(b, CARET);
    if (!r) r = consumeToken(b, BANG);
    return r;
  }

  /* ********************************************************** */
  // VAR | LET | EMBED
  public static boolean binding(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binding")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BINDING, "<binding>");
    r = consumeToken(b, VAR);
    if (!r) r = consumeToken(b, LET);
    if (!r) r = consumeToken(b, EMBED);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // (safeop | unsafeop | partialop) [QM] term
  public static boolean binop(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binop")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BINOP, "<binop>");
    r = binop_0(b, l + 1);
    r = r && binop_1(b, l + 1);
    r = r && term(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // safeop | unsafeop | partialop
  private static boolean binop_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binop_0")) return false;
    boolean r;
    r = safeop(b, l + 1);
    if (!r) r = unsafeop(b, l + 1);
    if (!r) r = partialop(b, l + 1);
    return r;
  }

  // [QM]
  private static boolean binop_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binop_1")) return false;
    consumeToken(b, QM);
    return true;
  }

  /* ********************************************************** */
  // LP [positional] [named] RP [QM]
  public static boolean call(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call")) return false;
    if (!nextTokenIs(b, LP)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LP);
    r = r && call_1(b, l + 1);
    r = r && call_2(b, l + 1);
    r = r && consumeToken(b, RP);
    r = r && call_4(b, l + 1);
    exit_section_(b, m, CALL, r);
    return r;
  }

  // [positional]
  private static boolean call_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_1")) return false;
    positional(b, l + 1);
    return true;
  }

  // [named]
  private static boolean call_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_2")) return false;
    named(b, l + 1);
    return true;
  }

  // [QM]
  private static boolean call_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_4")) return false;
    consumeToken(b, QM);
    return true;
  }

  /* ********************************************************** */
  // ISO | REF | TRN | VAL | BOX | TAG
  public static boolean cap(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cap")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CAP, "<cap>");
    r = consumeToken(b, ISO);
    if (!r) r = consumeToken(b, REF);
    if (!r) r = consumeToken(b, TRN);
    if (!r) r = consumeToken(b, VAL);
    if (!r) r = consumeToken(b, BOX);
    if (!r) r = consumeToken(b, TAG);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // particle
  //   | whileloop
  //   | forloop
  //   | LP rawseq [tuple] RP
  //   | LBK [AS type COLON] [rawseq] RBK
  public static boolean caseatom(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "caseatom")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CASEATOM, "<caseatom>");
    r = particle(b, l + 1);
    if (!r) r = whileloop(b, l + 1);
    if (!r) r = forloop(b, l + 1);
    if (!r) r = caseatom_3(b, l + 1);
    if (!r) r = caseatom_4(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // LP rawseq [tuple] RP
  private static boolean caseatom_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "caseatom_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LP);
    r = r && rawseq(b, l + 1);
    r = r && caseatom_3_2(b, l + 1);
    r = r && consumeToken(b, RP);
    exit_section_(b, m, null, r);
    return r;
  }

  // [tuple]
  private static boolean caseatom_3_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "caseatom_3_2")) return false;
    tuple(b, l + 1);
    return true;
  }

  // LBK [AS type COLON] [rawseq] RBK
  private static boolean caseatom_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "caseatom_4")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBK);
    r = r && caseatom_4_1(b, l + 1);
    r = r && caseatom_4_2(b, l + 1);
    r = r && consumeToken(b, RBK);
    exit_section_(b, m, null, r);
    return r;
  }

  // [AS type COLON]
  private static boolean caseatom_4_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "caseatom_4_1")) return false;
    caseatom_4_1_0(b, l + 1);
    return true;
  }

  // AS type COLON
  private static boolean caseatom_4_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "caseatom_4_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AS);
    r = r && type(b, l + 1);
    r = r && consumeToken(b, COLON);
    exit_section_(b, m, null, r);
    return r;
  }

  // [rawseq]
  private static boolean caseatom_4_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "caseatom_4_2")) return false;
    rawseq(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // PIPE [idlist] [casepattern] [IF rawseq] [ARROW rawseq]
  public static boolean caseexpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "caseexpr")) return false;
    if (!nextTokenIs(b, PIPE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PIPE);
    r = r && caseexpr_1(b, l + 1);
    r = r && caseexpr_2(b, l + 1);
    r = r && caseexpr_3(b, l + 1);
    r = r && caseexpr_4(b, l + 1);
    exit_section_(b, m, CASEEXPR, r);
    return r;
  }

  // [idlist]
  private static boolean caseexpr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "caseexpr_1")) return false;
    idlist(b, l + 1);
    return true;
  }

  // [casepattern]
  private static boolean caseexpr_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "caseexpr_2")) return false;
    casepattern(b, l + 1);
    return true;
  }

  // [IF rawseq]
  private static boolean caseexpr_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "caseexpr_3")) return false;
    caseexpr_3_0(b, l + 1);
    return true;
  }

  // IF rawseq
  private static boolean caseexpr_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "caseexpr_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IF);
    r = r && rawseq(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [ARROW rawseq]
  private static boolean caseexpr_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "caseexpr_4")) return false;
    caseexpr_4_0(b, l + 1);
    return true;
  }

  // ARROW rawseq
  private static boolean caseexpr_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "caseexpr_4_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ARROW);
    r = r && rawseq(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // (NOT | ADDRESSOF | [newline] SUB | [newline] SUB_UNSAFE | DIGESTOF) caseparampattern
  //   | casepostfix
  public static boolean caseparampattern(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "caseparampattern")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _COLLAPSE_, CASEPARAMPATTERN, "<caseparampattern>");
    r = caseparampattern_0(b, l + 1);
    if (!r) r = casepostfix(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }
